# toto-backup

./: .gitignore  .licenseheader.j2  .pre-commit-config.yaml  README.md  mise.toml  pylock.toml  pyproject.toml
.githooks/: pre-commit
.github/: dependabot.yml  release.yml
.github/workflows/: build.yaml  build.yml  checks.yml  release.yaml  release.yml  tests.yml
.mise/tasks/: licenseheaders
src/toto_backup/: card.py  tag.py  toto_backup.py  utils.py
tests/: utils.py
tests/data/: empty.m4a  empty.opus
tests/integration/: __init__.py  toto_backup_test.py
tests/unit/: __init__.py  card_test.py  tag_test.py  toto_backup_test.py  utils_test.py
